--- a/BDTwitrend/pom.xml
+++ b/BDTwitrend/pom.xml
@@ -14,13 +14,13 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
-	<!-- pluginRepositories>
+	<pluginRepositories>
 		<pluginRepository>
 			<id>scala-tools.org</id>
 			<name>Scala-tools Maven2 Repository</name>
 			<url>http://scala-tools.org/repo-releases</url>
 		</pluginRepository>
-	</pluginRepositories-->
+	</pluginRepositories>
 	<dependencies>
 		<dependency>
 			<groupId>org.apache.spark</groupId>
@@ -43,6 +43,12 @@
 	      <version>2.1.0</version>
 	      <scope>provided</scope>
 	    </dependency>
+	    <!-- https://mvnrepository.com/artifact/org.apache.spark/spark-sql -->
+		<dependency>
+		    <groupId>org.apache.spark</groupId>
+		    <artifactId>spark-sql_2.10</artifactId>
+		    <version>2.1.0</version>
+		</dependency>
 	    
 	    
 	    
@@ -84,6 +90,14 @@
 			<groupId>org.apache.hbase</groupId>		 
 			<artifactId>hbase-server</artifactId>	 
 			<version>1.3.1</version>		 
+		</dependency>
+		
+		<dependency>
+			<groupId>jdk.tools</groupId>
+			<artifactId>jdk.tools</artifactId>
+			<scope>system</scope>
+			<version>1.6</version>
+			<systemPath>${JAVA_HOME}/lib/tools.jar</systemPath>
 		</dependency>
 		
 	</dependencies>
